# PolyMeteo

./: .env.example  README.md  pyproject.toml
src/: config.py  logger.py  main.py
src/polymarket/: clob_client.py  market_resolution.py  markets.py  models.py  trader.py
src/risk/: kill_switch.py  limits.py  sizing.py
src/strategy/: buckets.py  decision.py  late_peak_risk.py  lock19.py  nowcast.py  prior.py  priors.py
src/utils/: retry.py  time.py
src/weather/: meteostat_client.py  models.py  open_meteo_client.py  wunderground_client.py
tests/: test_buckets.py  test_decision.py  test_gamma_discovery.py  test_late_peak_risk.py  test_lock19_strategy.py  test_market_resolution.py  test_open_meteo_client.py  test_prior_forecast.py  test_risk_limits.py  test_runtime_polling_and_execution.py
